k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpe-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpe-api
  template:
    metadata:
      labels:
        app: gpe-api
    spec:
      containers:
        - name: gpe-api
          image: gpe-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8090
