k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpe-api-service
spec:
  selector:
    app: gpe-api
  ports:
    - port: 80
      targetPort: 8090
