k8s/gpe-api-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpe-api-nodeport
spec:
  type: NodePort
  selector:
    app: gpe-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8090
      nodePort: 30080
