k8s/gpe-front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gpe-front-ingress
spec:
  rules:
    - host: gpe.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gpe-front-service
                port:
                  number: 80
