k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gpe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: gpe.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gpe-front-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gpe-api-service
                port:
                  number: 80
